fix(cards): stretch related-post thumbnail to full card height on mobile

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1612,7 +1612,7 @@ $ext-link-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg
           aspect-ratio: auto;
           width: 90px;
           min-width: 90px;
-          height: 72px;
+          align-self: stretch;
           flex-shrink: 0;
         }
 
